<resources>
    <string name="app_name">TaChegando</string>
    <string name="title_activity_mapas">Mapa</string>
    <string name="chave_desktop">AIzaSyDrcv33f40d-Rq4okkJQ4-KQZF1vRwfJ_g</string>
    <string name="chave_mac">AIzaSyAR-7_6bW8fTNhq1RWilsf_pUNpMDq1p0M</string>
    <string name="chave_matheus">AIzaSyCbGmJFxVYWBpy51UF7khZWPrMRZ6vt0y0</string>
    <string name="chave_rodrigo">AIzaSyAvI1Xwfvx9ZfY1oj2G4o6mMrMv8eAeYz0</string>
    <string name="chave_gustavo">AIzaSyAq-TF61G2jutp1sFIRq2Vh8Hk4OEE_-Xg</string>
    <string name="chave_ivan">AIzaSyDuGhdvXJpIKLZx96YMs5FlklLrT9ENew4</string>
    <string name="chave_release">AIzaSyAyo87oeqWURVqdeB7DvBaErkPxoe-DX2k</string>
    <string name="chave_maps">@string/chave_desktop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- mapas activity -->
    <string name="seu_gps_esta_desligado">Parece que seu GPS está desligado. É necessario ligar ele!</string>
    <string name="ativar">Ativar</string>
    <string name="nao_ativar">Não Ativar</string>
    <string name="gps_ainda_desativado">Parece que seu GPS ainda está desativado!</string>

    <!-- nova viagem manual -->
    <string name="sua_localizacao_atual_e">Sua localização atual é:</string>
    <string name="nova_viagem_manual">Nova Viagem Manual</string>
    <string name="novo_ponto_manual">Novo Ponto</string>
    <string name="campo_em_branco">Campo em branco!</string>
    <string name="localizacao_nao_encontrada">Localização não encontrada!</string>

    <!-- menu principal xml -->
    <string name="nova_viagem">Nova viagem</string>
    <string name="procurar_viagem">Procurar viagem</string>
    <string name="lista_de_viagens">Lista de viagens</string>

    <!-- buscar onibus controller -->
    <string name="procurar_onibus">Procurar Onibus:</string>
    <string name="informe_o_nome_da_viagem">Informe o nome da viagem:</string>
    <string name="procurar">Procurar</string>
    <string name="viagem_nao_encontrada">Viagem não encontrada</string>
    <string name="cancelar">Cancelar</string>

    <!-- nova Viagem controller -->
    <string name="deseja_adicionar_uma_nova_viagem_de_que_forma">Deseja adicionar uma nova viagem de que forma?</string>
    <string name="qrCode">QRCode</string>
    <string name="manual">Manual</string>

    <!-- informação onibus dialog Fragment -->
    <string name="distancia">Distância: </string>
    <string name="onibus">Ônibus</string>
    <string name="deseja_entrar_no_onibus">Deseja entrar no ônibus?</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="deseja_denunciar_o_passageiro">Deseja denunciar o passageiro?</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>

    <!-- nova viagem qrCode dialog fragment -->
    <string name="e_necessario_aceitar_a_permissao_para_utilizar_o_qrCode">É necessario aceitar a permissão para utilizar o QRCODE</string>
    <string name="tente_scannear_novamente">Tente scannear novamente</string>
    <string name="nova_viagem_qr_code">Nova Viagem QRCode</string>

    <!-- fragment buscar onibus dialog xml -->
    <string name="viagem_encontrada">Viagem encontrada</string>

    <!-- fragment nova viagem dialog xml -->
    <string name="salvar">Salvar</string>

    <!-- verificar login passageiro activity -->
    <string name="verificacao">Verificação</string>
    <string name="entre_com_codigo">Entre com o código</string>
    <string name="verificado">Verificado</string>
    <string name="verificacao_nao_realizada">Verificação não realizada</string>

    <!-- perfil passageiro activity -->
    <string name="perfil">Perfil</string>

    <!-- login passageiro activity -->
    <string name="login">Login</string>
    <string name="entre_com_numero_valido">Entre com número válido</string>

    <!-- editar perfil passageiro activity -->
    <string name="mapa">Mapa</string>

    <!-- activity login passageiro xml -->
    <string name="telefone">Telefone</string>
    <string name="entre_com_o_telefone">Entre com o telefone</string>
    <string name="continuar">Continuar</string>

    <!-- activity verificar login xml -->
    <string name="codigo">Código</string>
    <string name="verificacao_do_codigo">Verificação do código</string>

    <!-- fragment chat xml -->
    <string name="digite_sua_mensagem">Digite sua mensagem</string>

    <!-- fragment nova viagem manual dialog xml -->
    <string name="nome_da_rota">Nome da rota</string>
    <string name="nome_do_ponto">Nome do Ponto</string>

    <!-- menu informacao dialog xml -->
    <string name="denunciar">Denunciar</string>
    <string name="entrar">Entrar</string>
    <string name="trajeto">Trajeto</string>
    <string name="descer_do_onibus">Descer do onibus</string>

    <!-- menu perfil passageiro xml -->
    <string name="sair">Sair</string>

    <!-- menu verificação login passageiro -->
    <string name="voltar">Voltar</string>

    <!-- estilo do mapa -->
    <string name="style_json">
        [
          {
            "featureType": "poi.business",
            "stylers": [
              {
                "visibility": "off"
              }
            ]
          }
        ]
    </string>
    <string name="denunciar_viagem">Deseja denunciar essa viagem?</string>
    <string name="deseja_sair_do_onibus">Deseja sair do onibus?</string>
    <string name="deseja_sair_do_app">Deseja sair do app?</string>
    <string name="detalhes">Detalhes</string>
    <string name="location_updated">Location Updated: %1$s</string>


</resources>
